--- a/style/style.css
+++ b/style/style.css
@@ -4,64 +4,125 @@
     box-sizing: border-box;
 }
 
-.button_class{
+.navbar-collapse {		/* Nastavenie vysky celeho navbaru */
+	height: 61px;
+}
+
+.button_class{			/* pre tlacidla kosika, prihlasenia */
 	display: flex;
 	justify-content: flex-end;
+}
+
+@media (max-width: 991.9px){
+	.button_spans{
+		display: none;
+	}
+}
+
+.button_class_mobil{	/* pre tlacidla kosika, prihlasenia  pre mobil*/
+	display: none;
 }
 
 .ul_class{
 	margin-right: 10%;
 }
 
+.nav-item{				/* li v ul */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 nav ul.navbar-nav{
 	margin-right: 5%;
-}
-
-@media (max-width: 767.9px){
-	nav form.d-flex{
-		display: none!important;
-	}
-}
-
-.button_class_mobil{
-	display: none;
-}
-
-@media (max-width: 767.9px){
-	.button_class_mobil{
-		display: block;
-		margin-left: auto;
-	}
+	height: 100%;
 }
 
 @media (max-width: 767.9px){
 	.button_class{
 		display: none;
 	}
-}
-
-@media (max-width: 767.9px){
 	nav ul.navbar-nav li{
 		height: 100%;
 	}
+	.button_class_mobil{
+		display: block;
+		margin-left: auto;
+	}
+	nav form.d-flex{
+		display: none!important;
+	}
+	.navbar-collapse {		/* Nastavenie vysky celeho navbaru */
+		height: 61px;
+	}
+
 }
 
-.hidden {
+@media (min-width: 768px){
+	.search_div {
+		display: none!important;
+	}
+}
+
+@media (max-width: 768px){
+	.search_button{
+		display: block;
+	}
+}
+
+
+.hidden {				/* cast navbaru, ktory sa zobrazuje na hover */
 	display: none;
 	width: 100%;
 }
 
-.navbar-collapse {
-	height: 10vh;
+.overlay {
+	position: relative;
 }
 
-nav ul.navbar-nav {
-	height: 100%;
+.fixed {
+	position: absolute;
+	height: 500px;
 }
 
+.search_div {
+	display: none;
+	background-color: #f8f9fa;
+}
 
-.nav-item{
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.formik {
+	height: 50px;
+	padding: 5px;
+}
+
+.btn-close{
+	height: 40px;
+	width: 41.33px;
+	padding: 0;
+	padding-left: 20px;
+	
+}
+
+.target_women, .target_men, .target_kids{
+	background-color: #f8f9fa;
+}
+
+.multi-column-dropdown {
+
+	list-style-type: none;
+}
+
+.multi-column-dropdown li {
+	text-align: center;
+	margin-top : 5x;
+}
+
+.multi-column-dropdown li a{
+	text-decoration: none;
+	color: black;
+}
+
+.navbar-toggler {
+	margin-top: 10.5px;
+	margin-bottom: 10.5px;
 }
