--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,36 @@
     box-sizing: border-box;
 }
 
-.navbar-collapse {		/* Nastavenie vysky celeho navbaru */
-	height: 61px;
+header {
+	background: #f8f9fa;
+	min-height: 64px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
+main {
+	margin-top: 64px;
+}
+
+@media only screen and (min-width: 768px) {
+	header {
+		padding-top: 12px;
+		padding-bottom: 12px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	nav ul.navbar-nav {
+		flex-direction: row;
+		justify-content: space-around;
+	}
+
+	.navbar-nav .nav-link {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 }
 
 .button_class{			/* pre tlacidla kosika, prihlasenia */
@@ -52,9 +80,6 @@ nav ul.navbar-nav{
 	nav form.d-flex{
 		display: none!important;
 	}
-	.navbar-collapse {		/* Nastavenie vysky celeho navbaru */
-		height: 61px;
-	}
 
 }
 
@@ -70,7 +95,6 @@ nav ul.navbar-nav{
 	}
 }
 
-
 .hidden {				/* cast navbaru, ktory sa zobrazuje na hover */
 	display: none;
 	width: 100%;
@@ -78,6 +102,14 @@ nav ul.navbar-nav{
 
 .overlay {
 	position: relative;
+}
+
+.overlay .container-fluid {
+	display: none;
+}
+
+.woman-section.active, .man-section.active, .kids-section.active {
+	display: block;
 }
 
 .fixed {
@@ -90,17 +122,10 @@ nav ul.navbar-nav{
 	background-color: #f8f9fa;
 }
 
-.formik {
+nav form.d-flex.formik {
 	height: 50px;
 	padding: 5px;
-}
-
-.btn-close{
-	height: 40px;
-	width: 41.33px;
-	padding: 0;
-	padding-left: 20px;
-	
+	display: flex !important;
 }
 
 .target_women, .target_men, .target_kids{
@@ -108,7 +133,6 @@ nav ul.navbar-nav{
 }
 
 .multi-column-dropdown {
-
 	list-style-type: none;
 }
 
@@ -125,4 +149,8 @@ nav ul.navbar-nav{
 .navbar-toggler {
 	margin-top: 10.5px;
 	margin-bottom: 10.5px;
+}
+
+.show .search_div {
+	display: block;
 }
