--- a/style/style.css
+++ b/style/style.css
@@ -167,14 +167,17 @@ nav form.d-flex.formik {
 	display: block;
 }
 
-.team {
-	text-align: center;
+.img_box img{
+	max-width: 100%;
 }
 
-.team img{
-	padding-bottom: 10px;
+.slider_container .container{
+	padding: 0 15px;
+	max-width: 1100px;
+	margin: 0 auto;
 }
 
-.slider{
-	padding-bottom: 40px;
+.card_slider{
+	padding: 50px 0;
 }
+
