--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,16 @@
     box-sizing: border-box;
 }
 
+body{
+	background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 header {
-	background: #f8f9fa;
+	background: rgba(0, 0, 0, 0.9);
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 	min-height: 64px;
 	position: fixed;
 	top: 0;
@@ -52,6 +60,20 @@ main {
 	display: flex;
 	justify-content: flex-end;
 }
+.btn-outline-success {
+    color: rgba(255,255,255,.80);
+    border-color: rgba(255,255,255,.80);
+	font-family: "Baskerville Old Face";
+	font-size: large;
+}
+
+.btn-outline-success:hover {
+	color: rgba(255,255,255,1);
+	background-color: rgba(0,0,0,1);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255,255,255,1);
+	text-decoration: underline;
+}
 
 @media (max-width: 991.9px){
 	.button_spans{
@@ -71,11 +93,22 @@ main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	
 }
 
 nav ul.navbar-nav{
 	margin-right: 5%;
 	height: 100%;
+}
+.navbar-light .navbar-nav .nav-link {
+    color: rgba(255,255,255,.80);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+	font-family: "Baskerville Old Face";
+	font-size: larger;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+    color: rgba(255,255,255,1);
+	text-decoration: underline;
 }
 
 @media (max-width: 767.9px){
@@ -89,10 +122,22 @@ nav ul.navbar-nav{
 		display: block;
 		margin-left: auto;
 	}
+
 	nav form.d-flex{
 		display: none!important;
 	}
-
+	.search_div .btn-outline-success{
+		background-color: rgba(255, 255, 255, 0.5);
+		color: rgba(0, 0, 0, 0.8);     
+		border-color: rgba(0, 0, 0, 0.8);
+	}
+	.search_div .btn-outline-success:hover{
+		background-color: rgba(255, 255, 255, 1);
+		color: rgba(0, 0, 0, 1);     
+		border-color: rgba(0, 0, 0, 1);
+		box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+		text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+	}
 }
 
 @media (min-width: 768px){
@@ -107,12 +152,38 @@ nav ul.navbar-nav{
 	}
 }
 
+.navbar-brand{
+	height: 100%;
+	width: 100%;
+}
+
+
+
+.navbar-toggler{
+	background-color: rgba(255, 255, 255, 0.9);
+	color: rgba(0, 0, 0, 0.8);     
+	border-color: rgba(0, 0, 0, 0.8);
+}
+.navbar-toggler:hover{
+	background-color: rgba(255, 255, 255, 1);
+	color: rgba(0, 0, 0, 1);     
+	border-color: rgba(0, 0, 0, 1);
+	box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+	text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+}
+
+
+.navbar-brand:hover{
+	content: url("../images/wtech_logo_hover.png");
+}
 
 .overlay .container-fluid {
 	display: none;
+	background-color: #f8f9fa;
 }
 .overlay li:hover{
-	background: blue;
+	color: rgba(0,0,0,1);
+	text-decoration: underline;
 }
 
 .woman-section.active, .man-section.active, .kids-section.active {
@@ -122,6 +193,19 @@ nav ul.navbar-nav{
 .fixed {
 	position: absolute;
 	height: 500px;
+}
+
+.form-control{
+	background-color: rgba(255,255,255,0.80);
+	border-color: rgba(255,255,255,0.80);
+	font-family: "Baskerville Old Face";
+	color: rgba(0,0,0,0.50);
+	font-size: large;
+}
+
+.form-control:hover{
+	background-color: rgba(255,255,255,1);
+	border-color: rgba(255,255,255,1);
 }
 
 .search_div {
@@ -135,6 +219,7 @@ nav form.d-flex.formik {
 	display: flex !important;
 }
 
+
 .target_women, .target_men, .target_kids{
 	background-color: #f8f9fa;
 }
@@ -146,21 +231,38 @@ nav form.d-flex.formik {
 .multi-column-dropdown li{
 	text-align: center;
 	margin-top : 5x;
+
 }
 
 .multi-column-dropdown ul{
 	display: flex;
 	justify-content: center;
+	
 }
 
 .multi-column-dropdown li a{
 	text-decoration: none;
-	color: black;
+	color: rgba(0,0,0,0.8);
+	text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+	font-family: "Baskerville Old Face";
+	font-size: large;
 }
+.title-section{
+	display: block; 
+	text-align: center; 
+	color: rgba(255,255,255,0.80);
+	background-color: rgba(0, 0, 0, 0.9);     
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    font-family: "Baskerville Old Face";
+    font-size: larger;
+}
+
 
 .navbar-toggler {
 	margin-top: 10.5px;
 	margin-bottom: 10.5px;
+	color: rgba(255,255,255,.80);
+    border-color: rgba(255,255,255,.80);
 }
 
 .show .search_div {
@@ -176,6 +278,50 @@ nav form.d-flex.formik {
 	padding: 0 15px;
 	max-width: 1100px;
 	margin: 0 auto;
+	
+}
+.slider_container h2{
+	color: rgba(255,255,255,.80);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+	font-family: "Baskerville Old Face";
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.9);
+}
+.slider_container{
+	background-color: rgba(255,255,255,1);
+	margin-top: 10%;
+	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.5);
+}
+
+.swiper-slide .img_box img{
+	width: 100%;
+	height: 80%;
+	transition: 0.5s;
+}
+
+
+.swiper-slide {
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.swiper-slide .content{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: rgba(255,255,255,.80);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+	font-family: "Baskerville Old Face";
+	text-align: center;
+	padding: 20px;
+	transform: translateY(45%);
+	transition: transform 0.3s ease-in-out;
+
+}
+
+.swiper-slide:hover .content{
+	transform: translateY(0);
 }
 
 .card_slider{
@@ -185,13 +331,19 @@ nav form.d-flex.formik {
 
 footer {
 	padding: 2.5% 10%!important;
-	border: 1px solid black;
+	margin-top: 5%;
+	background: rgba(0, 0, 0, 0.9);
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 footer .row {
 	margin-top: 20px;
 	display: flex;
 	align-items: center;
+	color: rgba(255,255,255,0.8);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+	font-family: "Baskerville Old Face";
+	font-size: larger;
 	text-align: start;
 }
 
@@ -207,3 +359,25 @@ footer hr{
 .row .col-4.mt-3 ul li{
 	margin: 3% 0;
 }
+.swiper-button-next, .swiper-button-prev{
+	border-radius: 20%;
+	padding: 2.8%;
+	background-color: rgba(0, 0, 0, 0.9);
+	border-color: rgba(255,255,255,.80);
+	
+}
+.swiper-button-next:hover, .swiper-button-prev:hover {
+	color: rgba(255,255,255,1);
+	background-color: rgba(0,0,0,1);
+	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255,255,255,1);
+}
+
+:root{
+	--swiper-navigation-color: rgba(255,255,255,.80);
+}
+.bi:hover{
+	color: rgba(255,255,255,1);
+}
+
+	
