--- a/style/style_product.css
+++ b/style/style_product.css
@@ -19,10 +19,17 @@
 }
 .btn-secondary:hover, .btn-secondary:focus{
   color: rgba(255,255,255,1);
-	background-color: rgba(0,0,0,1);
+	background-color: rgba(0,0,0,1)!important;
 	text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
-    border-color: rgba(255,255,255,1);
+  border-color: rgba(255,255,255,1);
 	text-decoration: underline;
+}
+
+span.plus:hover, span.plus:focus, span.minus:hover, span.minus:focus {
+  color: rgba(255,255,255,1);
+  background-color: rgba(0,0,0,1)!important;
+  text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+  border-color: rgba(255,255,255,1);
 }
 
 .color {
@@ -144,6 +151,25 @@
     text-align: center;
 }
 
+.qty {
+  display: flex;
+}
+
+.counter_div {
+  display: flex;
+  align-items: center ;
+
+}
+
+.counter_div input {
+  margin-right: 1vh;
+  margin-left: 1vh;
+}
+
+div.row.mb-5.details {
+  --bs-gutter-x: 0;
+}
+
 .qty .count {
     color: #000;
     display: inline-block;
@@ -210,11 +236,22 @@ input:disabled{
 }
 
 @media (max-width:768px){
-    .dropdowns {
-        margin-bottom: 20%;
-    }
     h2, h3, span.minus {
         margin-left: 5vh!important;
+    }
+
+    .swiper-slide img{
+      width: 70%;
+    }
+    .title-product, h3 {
+      font-size: large;
+    }
+
+    .counter_row {
+      margin-bottom: 3vh;
+    }
+    .dropdowns {
+      margin-bottom: 10%!important;
     }
 }
 
@@ -226,4 +263,9 @@ input:disabled{
     list-style-position: inside;
 }
 
-         
+.dropdown-menu {
+  max-height: 200px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: .5rem 0 0 .5rem;
+}
