--- a/style/style_delivery_page.css
+++ b/style/style_delivery_page.css
@@ -1,30 +1,80 @@
-main {
-    background-color: wheat;
-}
-h2{
+/*CSS - Delivery Page*/
+
+.nadpis_row {
+    margin-top: 10%;
+    background: rgba(0, 0, 0, 0.9);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
+    color: rgba(255, 255, 255, .80);
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    font-family: "Baskerville Old Face";
 }
 
-.row div{
+.obsah_row {
+    color: rgba(0, 0, 0, 0.9);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+    font-family: "Baskerville Old Face";
+    word-wrap: break-word;
+}
+
+.obsah_row h4,
+.obsah_row span,
+.obsah_row ul {
+    color: rgba(0, 0, 0, 0.9);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+    font-family: "Baskerville Old Face";
+}
+
+.obsah_row span {
+    font-size: larger;
+}
+
+.data_container {
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.obsah_row div {
     display: flex;
     justify-content: space-between;
 }
 
-.row ul {
+.obsah_row ul {
     list-style: none;
 }
 
-.buttony{
+.buttony {
     display: flex;
     justify-content: space-between;
 }
 
-.first_btn{
-    display: flex;
-    justify-content: start!important;
+.first_btn {
+    text-align: left;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
 }
 
-.second_btn{
-    display: flex;
-    justify-content: end!important;
+.second_btn {
+    text-align: right;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
 }
+
+.data_button {
+    width: 200px;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(0, 0, 0, 1);
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+}
+
+.data_button:hover {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(0, 0, 0, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 1);
+    text-decoration: underline;
+}
+
+/* End CSS*/
