--- a/style/style_main.css
+++ b/style/style_main.css
@@ -108,7 +108,7 @@ nav ul.navbar-nav{
 	font-family: "Baskerville Old Face";
 	font-size: larger;
 }
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
     color: rgba(255,255,255,1);
 	text-decoration: underline;
 }
@@ -258,6 +258,14 @@ nav form.d-flex.formik {
     font-size: larger;
 }
 
+@media (max-width: 320px){
+	.title-section{
+		font-size: small;
+	}
+	#womanSection ul, #manSection ul, #kidsSection ul {
+		padding: 0;
+	}
+}
 
 .navbar-toggler {
 	margin-top: 10.5px;
