--- a/style/style_product_list.css
+++ b/style/style_product_list.css
@@ -237,3 +237,7 @@
     text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
     opacity: 1;
 }
+
+#choices-multiple-remove-button{
+    overflow: scroll;
+}
