--- a/style/style_admin_app_product_page.css
+++ b/style/style_admin_app_product_page.css
@@ -1,3 +1,26 @@
+.admin_section{
+    display: flex;
+    margin-top: 10%;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+}
+
+.main_title, .card-body{
+    font-family: "Baskerville Old Face";
+    padding: 20px;
+    color: rgba(0, 0, 0, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+}
+
+.main_title{
+    text-align: center;
+}
+
+.card-body{
+    margin-bottom: 20px;
+}
+
+
 .bootstrap-select>.dropdown-toggle.bs-placeholder{
     border: 1px solid rgb(0,0,0);
 }
@@ -21,6 +44,7 @@
 .circle.orange {background-color: orange}
 .circle.black { background-color: #000000; }
 .circle.white { background-color: #ffffff; }
+.circle.other {border: none}
 
 .dropdown-menu.show {
     max-height: 200px;
@@ -28,13 +52,42 @@
     padding: 0;
 }
 
+.bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+    overflow-x: scroll;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 15px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1);
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.5);
 }
 
-::-webkit-scrollbar-thumb.filter-option-inner-inner
+.filter-option-inner-inner{
+    overflow-x: scroll!important;
+}
+
+.add_button{
+    width: 60%;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(0, 0, 0, 1);
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+    margin-bottom: 10px;
+}
+
+.add_button:hover {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(0, 0, 0, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 1);
+    text-decoration: underline;
+}
+
+.number-input{
+    width: 220px;
+}
