--- a/style/style_shopping_cart_page.css
+++ b/style/style_shopping_cart_page.css
@@ -9,10 +9,52 @@
 }
 
 .card_container {
+    margin-top: 20px;
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+    font-family: "Baskerville Old Face";
 
 }
+
+.order_button {
+    width: 100%;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(0, 0, 0, 1);
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.8);
+}
+
+.order_button:hover {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(0, 0, 0, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 1);
+    text-decoration: underline;
+}
+
+.finish_div .finish_btn{
+    display: flex;
+    justify-content: end;
+    padding-right: 0!important;
+    padding-left: 0!important;
+}
+
+.finish_div .all_price{
+    color: rgba(255, 255, 255, 1);
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+}
+
+.finish_div {
+    margin-top: 5%;
+    background: rgba(0, 0, 0, 0.9);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: "Baskerville Old Face";
+    margin-bottom: 10px;
+}
+
 
 .obsah_container{
     background: rgba(255, 255, 255, 0.9);
@@ -30,7 +72,7 @@
     width: auto;
 }
 
-img {
+.card_container img {
     width: 100%;
     height: auto;
     margin-bottom: 50px;
@@ -43,6 +85,7 @@ img {
   .counter_div {
     display: flex;
     align-items: center;
+    width: 70%;
   
 }
   
@@ -94,15 +137,8 @@ img {
     justify-content: center;
 }
 
-.cena {
-    align-items: end;
+.cena, .counter_div {
+    align-items: start;
+    margin-top: 2%;
 }
 
-.finish_div{
-    background-color: antiquewhite;
-}
-
-.finish_div .finish_btn {
-    display: flex;
-    justify-content: end;
-}
