--- a/style/style_landing_page.css
+++ b/style/style_landing_page.css
@@ -1,20 +1,11 @@
 /*CSS - Landing Page*/
 
+/*Carousel*/
+
 .slider_container{
 	background-color: rgba(255,255,255,1);
 	margin-top: 10%;
 	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.5);
-}
-
-:root{
-	--swiper-navigation-color: rgba(255,255,255,.80);
-}
-
-.slider_container .container{
-	padding: 0 15px;
-	max-width: 1100px;
-	margin: 0 auto;
-	
 }
 
 .slider_container h2{
@@ -25,8 +16,25 @@
 	background-color: rgba(0, 0, 0, 0.9);
 }
 
+.slider_container .container{
+	padding: 0 15px;
+	max-width: 1100px;
+	margin: 0 auto;
+}
+
+.card_slider{
+	padding: 50px 0;
+}
+
 .swiper-slide {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.swiper-slide .img_box img{
+	width: 100%;
+	height: 80%;
+	transition: 0.5s;
+    max-width: 100%;
 }
 
 .swiper-slide .content{
@@ -40,34 +48,9 @@
 	font-family: "Baskerville Old Face";
 	text-align: center;
 	padding: 20px;
-
 }
 
-
-.swiper-slide .img_box img{
-	width: 100%;
-	height: 80%;
-	transition: 0.5s;
-    max-width: 100%;
-}
-
-@media only screen and (min-width: 576px) {
-	.swiper-slide .content{
-		transform: translateY(45%);
-		transition: transform 0.3s ease-in-out;
-	}
-	.swiper-slide:hover .content{
-		transform: translateY(0);
-	} 
-}
-
-.card_slider{
-	padding: 50px 0;
-}
-
-.row .col-4.mt-3 ul li{
-	margin: 3% 0;
-}
+/*Buttony v Carousel*/
 
 .swiper-button-next, .swiper-button-prev{
 	border-radius: 20%;
@@ -84,10 +67,22 @@
     border-color: rgba(255,255,255,1);
 }
 
-.bi:hover{
-	color: rgba(255,255,255,1);
+:root{
+	--swiper-navigation-color: rgba(255,255,255,.80);
 }
 
+/*Koniec buttony v Carousel*/
+/*Pri mobiloch sa zmení z hover animácie na bez animácie*/
 
+@media only screen and (min-width: 576px) {
+	.swiper-slide .content{
+		transform: translateY(45%);
+		transition: transform 0.3s ease-in-out;
+	}
+	.swiper-slide:hover .content{
+		transform: translateY(0);
+	} 
+}
 
+/*Koniec Carouselu*/
 /*CSS Landing-Page End*/
