--- a/style/style_main.css
+++ b/style/style_main.css
@@ -308,6 +308,12 @@ footer a {
 footer hr{
 	margin: 30px 0;
 }
+
+.bi:hover{
+	color: rgba(255,255,255,1);
+}
+
+
 @media only screen and (max-width: 576px) {
     footer .row, footer h5  {
         font-size: medium;
