--- a/style/style_shopping_cart_page.css
+++ b/style/style_shopping_cart_page.css
@@ -1,3 +1,4 @@
+/* Nadpis stranky*/ 
 .nadpis_row {
     margin-top: 10%;
     background: rgba(0, 0, 0, 0.9);
@@ -8,6 +9,15 @@
     font-family: "Baskerville Old Face";
 }
 
+/* Kontainer stranky kde sa nachadza cely kosik */
+.obsah_container{
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+    height: 1000px;
+}
+
+/* Kontainer v ktorom je jeden item kosiku  */
 .card_container {
     margin-top: 20px;
     background: rgba(255, 255, 255, 0.9);
@@ -16,6 +26,12 @@
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
     font-family: "Baskerville Old Face";
 
+}
+
+.card_container img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 50px;
 }
 
 .order_button {
@@ -56,13 +72,6 @@
 }
 
 
-.obsah_container{
-    background: rgba(255, 255, 255, 0.9);
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    overflow-y: scroll;
-    height: 1000px;
-}
-
 .remove_btn_row {
     display: flex;
     justify-content: end;
@@ -72,21 +81,15 @@
     width: auto;
 }
 
-.card_container img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 50px;
-}
-
+/* Zaciatok stylu counteru */
 .qty {
     display: flex;
   }
   
-  .counter_div {
+.counter_div {
     display: flex;
     align-items: center;
     width: 70%;
-  
 }
   
 .counter_div input {
@@ -130,6 +133,7 @@
     border-radius: 50%;
     background-clip: padding-box;
 }
+/*Koniec stylu counteru */
 
 .velkost, .counter_btn, .cena {
     display: flex;
