--- a/style/style_product_list.css
+++ b/style/style_product_list.css
@@ -238,13 +238,22 @@
     opacity: 1;
 }
 
-#choices-multiple-remove-button{
-    overflow: scroll;
 
+.bootstrap-select>.dropdown-toggle{
+    width: 80%!important;
+    height: 100%;
+}
+
+#price-dropdown {
+    width: 100%!important;
+    height: 100%;
 }
 
 .bootstrap-select>.dropdown-toggle.bs-placeholder{
     border: 1px solid rgb(0,0,0);
+    margin-right: 5%;
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+    font-family: "Baskerville Old Face";
 }
 
 .circle {
@@ -290,4 +299,41 @@
 
 .filter-option-inner-inner{
     overflow-x: scroll!important;
+}
+
+
+.from_to_dropdown form{
+    display: flex;
+    justify-content: space-around;
+}
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.form-group label {
+    margin-top: 5px;
+}
+
+.form-group input {
+    max-width: 100px;
+    padding: 0;
+    margin: 5px;
+    border: black solid 1px;
+}
+
+.filter_dropdown {
+    height: 46px;
+    width: 100%;
+}
+
+.dropdown-menu.show{
+    padding: 5px;
+}
+
+.apply-button {
+    display: flex;
+    justify-content: center;
 }
